src/test/deca/context/invalid/provided/ContextSansObjet/OperationsUnaires/MinusBool.deca
//Description:
//  Vérification contextuelle de l'opérateur unaire - sur le type boolean
//
//Résultat:
//  Erreur contextuelle
//  ligne 8 : unaryMinus est applicable sur les types numériques
{
    -true;
}